--- a/presentation.tex
+++ b/presentation.tex
@@ -206,7 +206,25 @@
                 \tikzset{edge/.style = {->,> = latex'}}
                 \node[vertex] (0) at (0, 4) {0};
                 \node[vertex] (1) at (3, 4) {1};
-                \node[vertex] (2) at (0, 2) {1};
+                \node[vertex] (2) at (0, 2) {2};
+                \node[vertex] (3) at (3, 2) {3};
+                \node[vertex] (4) at (1.5, 0) {4};
+
+                \draw[edge] (0) to [loop above] (0);
+                \draw[edge] (0) to (4);
+
+                \draw[edge] (1) to (2);
+                \draw[edge] (1) to [bend right] (3);
+                \draw[edge] (1) to (0);
+
+                \draw[edge] (2) to (0);
+                \draw[edge] (2) to (4);
+
+                \draw[edge] (3) to [loop right] (3);
+                \draw[edge] (3) to [bend right] (1);
+                \draw[edge] (3) to [bend right] (4);
+
+                \draw[edge] (4) to [bend right] (3);
             \end{tikzpicture}
         \end{column}
         \begin{column}{0.5\textwidth}
@@ -216,11 +234,211 @@ vector<vector<int>> graph = {
     {2, 3, 0},
     {0, 4},
     {3, 1, 4},
-    {2, 3}
+    {3}
 };
             \end{lstlisting}
         \end{column}
     \end{columns}
+\end{frame}
+\begin{frame}[fragile]
+    \frametitle{Edge List}
+    \begin{columns}
+        \begin{column}{0.5\textwidth}
+            \begin{tikzpicture}[draw=white,color=white]
+
+                \tikzset{vertex/.style = {shape=circle,draw,minimum size=1.5em}}
+                \tikzset{edge/.style = {->,> = latex'}}
+                \node[vertex] (0) at (0, 4) {0};
+                \node[vertex] (1) at (3, 4) {1};
+                \node[vertex] (2) at (0, 2) {2};
+                \node[vertex] (3) at (3, 2) {3};
+                \node[vertex] (4) at (1.5, 0) {4};
+
+                \draw[edge] (0) to [loop above] (0);
+                \draw[edge] (0) to (4);
+
+                \draw[edge] (1) to (2);
+                \draw[edge] (1) to [bend right] (3);
+                \draw[edge] (1) to (0);
+
+                \draw[edge] (2) to (0);
+                \draw[edge] (2) to (4);
+
+                \draw[edge] (3) to [loop right] (3);
+                \draw[edge] (3) to [bend right] (1);
+                \draw[edge] (3) to [bend right] (4);
+
+                \draw[edge] (4) to [bend right] (3);
+            \end{tikzpicture}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+            \begin{lstlisting}
+vector<vector<int>> graph = {
+    {0, 0},
+    {0, 4},
+    {1, 2},
+    {1, 3},
+    {1, 0},
+    {2, 0},
+    {2, 4},
+    {3, 3},
+    {3, 1},
+    {3, 4},
+    {4, 3}
+};
+            \end{lstlisting}
+        \end{column}
+    \end{columns}
+\end{frame}
+\begin{frame}
+    \frametitle{Graph Operations}
+    \begin{itemize}
+        \item Part of the graph ADT
+        \item Theoretical functions you can perform on nodes
+        \pause
+        \item View Operations
+        \begin{itemize}
+            \item adjacent(x,y): bool
+            \item neighbors(x): list of edges
+            \item get\_vertex\_value(x): value type
+            \item get\_edge\_value(\dots): value type\only<2->\footnote[frame]{Argument is either edge key or the two vertices it connects, depending on representation.}
+        \end{itemize}
+        \pause
+        \item Modify Operations\only<3->\footnote[frame]{We won't be modifying already constructed graphs in this workshop.}
+        \begin{itemize}
+            \item set\_vertex\_value(x, v): void
+            \item set\_edge\_value(\dots, v): void
+            \item add / remove edges / vertices
+        \end{itemize}
+    \end{itemize}
+\end{frame}
+\begin{frame}
+    \frametitle{Properties of a Graph}
+    \begin{itemize}
+        \item This is information you might be given as part of an interview prompt.
+        \item If you misinterpret it, you're basically guaranteed to fail.
+        \pause
+        \item Cyclic / Acyclic
+        \begin{itemize}
+            \item It it possible to end up back where you started without re-using edges?
+            \item Most of the time problems that involve acyclic graphs are phrased as tree problems,
+                  so if you aren't told otherwise, assume you have to deal with cycles in your code.
+        \end{itemize}
+        \pause
+        \item Directed / Undirected
+        \begin{itemize}
+            \item Are the edges directional?
+            \item All the graphs I showed thus far were directed, but by removing
+                  information you could easily make them undirected.
+        \end{itemize}
+        \pause
+        \item Values on Edges / Nodes
+        \begin{itemize}
+            \item Sometimes all that really matters is the connections, sometimes you have values attached.
+            \item For e.g. calculating the travel time between two cities on a graph representing a map.
+            \item Representation in code will get more complex, but luckily you'll usually be given starter code.
+        \end{itemize}
+    \end{itemize}
+\end{frame}
+\begin{frame}
+    \frametitle{Most Basic Graph Algorithm: Depth First Search}
+    \begin{itemize}
+        \item Simple and straightforward (although not efficient) way to
+        identify any path between two nodes.
+        \item Path is not guaranteed to be optimal by any metric.
+    \end{itemize}
+    
+
+\end{frame}
+\begin{frame}
+    \frametitle{Problem 1: Flower Garden}
+    You have N gardens, labeled 1 to N - 1.  In each garden, you want to
+    plant one of 4 types of flowers (labeled 0 to 3).  You are supplied
+    with an array paths such that paths[i] = [x,y] means that there is a
+    bidirectional path between nodes x and y. You may assume that no
+    garden has more than 3 paths connecting to it.
+    \vfill
+    Your task is to determine which type of flower to plant in each
+    garden, such that no two connected gardens have the same flower.
+    Your code should return an array of size N, where each element
+    represents the flower planted in each garden.
+\end{frame}
+\begin{frame}[fragile]
+    \frametitle{Solution 1 (Inneficient but Easy to Understand)}
+    \begin{lstlisting}[basicstyle=\tiny]
+vector<int> gardenNoAdj(int N, vector<vector<int>>& paths) {
+    vector<int> result(N, -1);
+    for (int i = 1; i <= N; ++i) {
+        int color = 1;
+        for (; color <= 4; ++color) {
+            bool conflict = false;
+            for (auto& edge : paths) {
+                if (edge[0] == i) {
+                    if (result[edge[1] - 1] == color) {
+                        // Conflict found for this color
+                        conflict = true;
+                        break;
+                    }
+                }
+                if (edge[1] == i) {
+                    if (result[edge[0] - 1] == color) {
+                        // Conflict found for this color
+                        conflict = true;
+                        break;
+                    }
+                }
+            }
+            if (!conflict) {
+                break;
+            }
+        }
+        result[i - 1] = color;
+    }
+    return result;
+}
+    \end{lstlisting}
+
+\end{frame}
+\begin{frame}
+    \frametitle{Problem 2: Bipartite}
+    \begin{columns}
+        \begin{column}{0.5\textwidth}
+            Given an undirected graph, determine whether it is bipartite.
+            A bipartite graph is simply one that can be split into two sets
+            of nodes such that no nodes in the same set are connected to each
+            other.
+            \\~\\
+            In more graphical terms, this means you can draw a line that crosses every edge.
+            \\~\\
+            Your function should take input as a list of nodes and return a
+            boolean. \footnote[frame]{\code{bool is\_bipartite(const vector<vector<int>>\& graph)}}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+            \centering
+            \begin{tikzpicture}[draw=white,color=white]
+                \tikzset{vertex/.style = {shape=circle,draw,minimum size=1.5em}}
+                \tikzset{edge/.style = {> = latex'}}
+                \node[vertex, draw=red, color = red] (0) at (0, 4) {0};
+                \node[vertex] (1) at (3, 4) {1};
+                \node[vertex, draw=red, color = red] (2) at (0, 2) {2};
+                \node[vertex] (3) at (3, 2) {3};
+                \node[vertex] (4) at (1.5, 0) {4};
+
+                \draw[edge] (0) to (4);
+
+                \draw[edge] (1) to (2);
+                \draw[edge] (1) to (0);
+
+                \draw[edge] (2) to (4);
+
+                \draw[edge] (3) to (2);
+
+                \draw[dotted] (0,0) -- (2,5);
+            \end{tikzpicture}
+            
+        \end{column}
+    \end{columns}
+    
 
 \end{frame}
 \end{document}
